[package]
name = "with_id_workspace"
version = "0.1.0"
edition = "2021"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "workspace for with-str-id"
keywords = ["id"]
license = "MIT"
repository ="https://github.com/ArseniiRudenko/with-str-id"

[dependencies]
with-id = {path = "with-id", version = "0.1.0", features=["derive"]}

[workspace]
