[package]
name = "with_id_workspace"
version = "1.0.0"
edition = "2021"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "workspace for with-str-id"
keywords = ["id"]
license = "MIT"
repository ="https://github.com/ArseniiRudenko/with-str-id"

[dependencies]
with-id = {path = "with-id", version = "1", features=["derive"]}

[workspace]
