[package]
name = "with-id-derive"
version = "1.0.1"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "A derive macro for with-id"
keywords = ["template", "derive", "id"]
edition = "2018"
license = "MIT"
repository ="https://github.com/ArseniiRudenko/with-str-id"
readme="README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.0"

